Fix IE8 compatibility mode truncating text

--- a/css/navbar/menu_colors_navbar_hide.css
+++ b/css/navbar/menu_colors_navbar_hide.css
@@ -1,3 +1,2 @@
 #block-views-5d9ea445b3cc9f3542a5ad6d2dfa5e29 {
-  display: none;
-}
+  display: none; }
