--- a/sass/common.scss
+++ b/sass/common.scss
@@ -297,3 +297,16 @@ body.menu-colors-sidebar-right {
 }
 
 
+.menu-colors #content {
+  float: none;
+}
+
+.menu-colors #content-sidebar-wrapper {
+  position: relative;
+}
+
+#block-views-632c02ef065305bc3a4fbc81affb43d9 {
+  position: absolute;
+  top: 18px;
+  left: 30px;
+}
